# aiosni

./: README.rst  SConstruct  pyproject.toml
aiosni/: __init__.py  __main__.py
